force-app/main/default/objects/Stock_Transfer__c/Stock_Transfer__c.object-meta.xml
<CustomObject>
    <label>Stock Transfer</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Stock Transfer  Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>