force-app/main/default/objects/Stock_Transfer__c/fields/Destination_Phase__c.field-meta.xml
<CustomField>
    <fullName>Destination_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Stock Transfers (Destination Phase)</relationshipLabel>
    <relationshipName>Stock_Transfers1</relationshipName>
    <type>Lookup</type>
</CustomField>