force-app/main/default/objects/Stock_Transfer__c/fields/Source_Phase__c.field-meta.xml
<CustomField>
    <fullName>Source_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Stock Transfers (Source Phase)</relationshipLabel>
    <relationshipName>Stock_Transfers</relationshipName>
    <type>Lookup</type>
</CustomField>