force-app/main/default/objects/Stock_Transfer__c/validationRules/Phase_Vr.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_Vr</fullName>
    <active>true</active>
    <errorConditionFormula>Destination_Phase__c  =  Source_Phase__c</errorConditionFormula>
    <errorMessage>Source Phase and Destination Phase are not same , Please enter the different Phase.</errorMessage>
</ValidationRule>